k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-portal
  labels:
    name: dev-portal
    app.kubernetes.io/name: backstage
    app.kubernetes.io/part-of: backstage-ulp
    environment: dev
